--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -11,7 +11,8 @@
 <p>-----------------------------------------------------------------------</p>
 <pre>40623228計算機程式與電腦輔助設計實習 課程倉儲<br/><a href="https://github.com/mdecadp2018/site-40623228">https://github.com/mdecadp2018/site-40623228</a>
 
-cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre><h2>CMSimfly 網站 簡介</h2>
+cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre>
+<h2>CMSimfly 網站 簡介</h2>
 <p style="text-align: left;"> 在網站中放置這學期所拍攝的影片或課程相關資料</p>
 <h2>pelican 網誌 簡介</h2>
 <p>在網誌中放置拍攝操作影片前或進行中遇到的問題與</p>
@@ -42,9 +43,38 @@ cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre><h
 <p><strong><span>說明機電資整合設計專案流程所需的相關套件運用與技術</span></strong><strong></strong></p>
 <h4><strong><a href="/site-40623228/content/Week9.html">Week-9:</a></strong></h4>
 <p><strong>期中自評</strong></p>
-<p><strong>期末分組</strong></p><h2>Week1</h2>
+<p><strong>期末分組</strong></p>
+<h4><strong><a href="/site-40623228/content/Week1.html">Week-10:</a></strong></h4>
+<p><strong>bg6-進度</strong></p>
+<p><strong><span>Onshape Week4</span></strong></p>
+<p><strong><span>Onshape Week4  homework</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week2.html">Week-11:</a></strong></h4>
+<p><strong>bg6-進度</strong></p>
+<p><strong><span>Onshape Week5</span></strong></p>
+<p><strong><span>Onshape Week5  homework</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week3.html">Week-12:</a></strong></h4>
+<p><strong>bg6-進度</strong></p>
+<p><strong><span>Onshape Week6</span></strong></p>
+<p><strong><span>Onshape Week6  homework</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week4.html">Week-13:</a></strong></h4>
+<p><strong>bg6-進度</strong></p>
+<p><strong><span>Onshape bg6 內容-齒輪設計</span></strong></p>
+<p><strong style="font-family: aileron; font-size: 22px;"><a href="/site-40623228/content/Week5.html">Week-14:</a></strong></p>
+<p><strong>bg6-進度</strong></p>
+<p><strong><span>Onshape bg6 內容-齒輪設計</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week6.html">Week-15:</a></strong></h4>
+<p><strong>bg6-進度</strong></p>
+<p><strong><span>Onshape bg6 內容-外型設計</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week7.html">Week-16:</a></strong></h4>
+<p><strong>bg6-進度</strong></p>
+<p><strong><span>Onshape bg6 內容-嚙合設計</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week7.html">Week-17:</a></strong></h4>
+<p><strong>bg6-進度</strong></p>
+<p><strong><span>Onshape bg6 內容-嚙合設計</span></strong></p>
+<h2>Week1</h2>
 <p><strong>說明如何利用 p37 中的 git 建立個人的 Github Pages 網站</strong></p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/ax2ZuPm3YXc" width="500"></iframe></p><h2>Week2</h2>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/ax2ZuPm3YXc" width="500"></iframe></p>
+<h2>Week2</h2>
 <p><strong><span>領取課程倉儲</span></strong></p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/sD9slKyFNao" width="500"></iframe></p>
 <p></p>
@@ -53,8 +83,10 @@ cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre><h
 <p></p>
 <p><strong>管理個人投影片</strong></p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/3SR7vom0YA8" width="500"></iframe></p>
-<p></p><h2>Week3</h2>
-<p><strong><span>~~~中秋節放假~~~</span></strong></p><h2>Week4</h2>
+<p></p>
+<h2>Week3</h2>
+<p><strong><span>~~~中秋節放假~~~</span></strong></p>
+<h2>Week4</h2>
 <p><strong><span>Onshape 說明</span></strong></p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/UdYcuRKS6o4" width="500"></iframe></p>
 <p><strong><span>Onshape Week1</span></strong></p>
@@ -63,14 +95,16 @@ cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre><h
 <p><strong><span></span></strong></p>
 <p><strong><span>Onshape Week1  homework</span></strong></p>
 <p><strong><span><a href="http://mde.tw/cadp2018/downloads/1-2-Homework.pdf">1-2-Homework.pdf</a></span></strong></p>
-<p><a href="https://cad.onshape.com/documents/c28554e4f648233ed223b53d/w/1df334f6179810c3d0af44a0/e/0ad0d33e9882deb1c2dcd530">https://cad.onshape.com/documents/c28554e4f648233ed223b53d/w/1df334f6179810c3d0af44a0/e/0ad0d33e9882deb1c2dcd530</a></p><h2>Week5</h2>
+<p><a href="https://cad.onshape.com/documents/c28554e4f648233ed223b53d/w/1df334f6179810c3d0af44a0/e/0ad0d33e9882deb1c2dcd530">https://cad.onshape.com/documents/c28554e4f648233ed223b53d/w/1df334f6179810c3d0af44a0/e/0ad0d33e9882deb1c2dcd530</a></p>
+<h2>Week5</h2>
 <p><strong><span>Onshape Week2</span></strong></p>
 <p><strong><span><a href="http://mde.tw/cadp2018/content/OnshapeWeek%202.html">2018 電腦輔助設計實習教材 OnshapeWeek 2</a></span></strong></p>
 <p><strong><span><a href="http://mde.tw/cadp2018/downloads/2-1-Lesson%20Plan.pdf">2-1-Lesson Plan.pdf</a></span></strong></p>
 <p><strong><span>Onshape Week2  homework</span></strong></p>
 <p><strong><span><a href="http://mde.tw/cadp2018/downloads/2-2-Homework.pdf">2-2-Homework.pdf</a></span></strong></p>
 <p><strong><span><a href="https://cad.onshape.com/documents/570c509de4b0b585da448d8c/w/a187923b0b25e8418f1d75b9/e/fb779d9a569edde8b30114ee">https://cad.onshape.com/documents/570c509de4b0b585da448d8c/w/a187923b0b25e8418f1d75b9/e/fb779d9a569edde8b30114ee</a></span></strong></p>
-<p></p><h2>Week6</h2>
+<p></p>
+<h2>Week6</h2>
 <p><strong><span>說明如何升級最新的CMSimfly倉儲中的flaskapp.py</span></strong></p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/mH_tW3erBqs" width="500"></iframe></p>
 <p><strong><span>Onshape Week3</span></strong></p>
@@ -79,7 +113,8 @@ cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre><h
 <p><strong><span>Onshape Week3  homework</span></strong></p>
 <p><strong><span><a href="http://mde.tw/cadp2018/downloads/3-2-Homework.pdf">3-2-Homework.pdf</a></span></strong></p>
 <p><a href="https://cad.onshape.com/documents/7b5553135cdf6caafa9a6946/w/549bd8008ce6e8a13dc6b6cf/e/27159315ac3670adb78c8eec">https://cad.onshape.com/documents/7b5553135cdf6caafa9a6946/w/549bd8008ce6e8a13dc6b6cf/e/27159315ac3670adb78c8eec</a></p>
-<p></p><h2>Week7</h2>
+<p></p>
+<h2>Week7</h2>
 <p>onshape</p>
 <p></p>
 <p><span>1.說明如何利用Virtualbox安裝 Ubuntu18.04.1伺服器，目的在自行建立Fossil SCM</span><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/JA75HIMhIgk" width="500"></iframe></p>
@@ -87,10 +122,23 @@ cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre><h
 <p><span>2.展示如何在先前所建立的虛擬Ubuntu 18.04上啟動https協定下的Fossil SCM伺服器</span><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/JA75HIMhIgk" width="500"></iframe></p>
 <p></p>
 <p><span>3.說明如何利用Fossil SCM建立區域網路中的分散式版次管理系統</span><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/hCyeqgfh02w" width="500"></iframe></p>
-<p></p><h2>Week8</h2>
+<p></p>
+<h2>Week8</h2>
 <p>onshape</p>
-<p><span>說明機電資整合設計專案流程所需的相關套件運用與技術</span><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/yAzfQm2gBEQ" width="500"></iframe></p><h2>Week9</h2>
-<p>onshape</p>
+<p><span>說明機電資整合設計專案流程所需的相關套件運用與技術</span><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/yAzfQm2gBEQ" width="500"></iframe></p>
+<h2>Week9</h2>
+<p><strong>1.期中自評</strong></p>
+<p><strong>2.期末分組</strong></p>
+<p><strong>說明如何利用 Github Classroom 進行期末分組專題倉儲的設定</strong></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/4i1D5rIrkAM" width="500"></iframe></p>
+<h2>Week10</h2>
+<h2>Week11</h2>
+<h2>Week12</h2>
+<h2>Week13</h2>
+<h2>Week14</h2>
+<h2>Week15</h2>
+<h2>Week16</h2>
+<h2>Week17</h2>
 <h1>OnShape 相關教材</h1>
 <p><a href="https://www.onshape.com/">https://www.onshape.com/</a> </p>
 <p>電腦輔助設計實習課程教材: <a href="http://mde.tw/cadp2018/content/">http://mde.tw/cadp2018/content/</a> </p>
