--- a/content/40623228網站簡介.html
+++ b/content/40623228網站簡介.html
@@ -67,7 +67,7 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section> <a href='CMSimfly 網站 簡介.html'>Next</a> >> CMSimfly 網站 簡介<br /><h1>40623228網站簡介</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a><li><a href='Week10.html'>Week10</a><li><a href='Week11.html'>Week11</a><li><a href='Week12.html'>Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a><li><a href='Week15.html'>Week15</a><li><a href='Week16.html'>Week16</a><li><a href='Week17.html'>Week17</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section> <a href='CMSimfly 網站 簡介.html'>Next</a> >> CMSimfly 網站 簡介<br /><h1>40623228網站簡介</h1>
 <p>計算機程式與電腦輔助設計實習課程</p>
 <p><a href="/site-40623228/content/CMSimfly%20網站%20簡介.html">40623228_CMSimfly 網站_簡介</a></p>
 <p><a href="/site-40623228/content/pelican%20網誌%C2%A0簡介.html">40623228_pelican 網誌_簡介</a></p>
@@ -80,4 +80,5 @@ $(function(){
 <p>-----------------------------------------------------------------------</p>
 <pre>40623228計算機程式與電腦輔助設計實習 課程倉儲<br/><a href="https://github.com/mdecadp2018/site-40623228">https://github.com/mdecadp2018/site-40623228</a>
 
-cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre><br /> <a href='CMSimfly 網站 簡介.html'>Next</a> >> CMSimfly 網站 簡介</section></div></body></html>
+cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre>
+<br /> <a href='CMSimfly 網站 簡介.html'>Next</a> >> CMSimfly 網站 簡介</section></div></body></html>
