--- a/content/Week5.html
+++ b/content/Week5.html
@@ -67,11 +67,12 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>Week4 << <a href='Week4.html'>Previous</a> <a href='Week6.html'>Next</a> >> Week6<br /><h1>Week5</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a><li><a href='Week10.html'>Week10</a><li><a href='Week11.html'>Week11</a><li><a href='Week12.html'>Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a><li><a href='Week15.html'>Week15</a><li><a href='Week16.html'>Week16</a><li><a href='Week17.html'>Week17</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>Week4 << <a href='Week4.html'>Previous</a> <a href='Week6.html'>Next</a> >> Week6<br /><h1>Week5</h1>
 <p><strong><span>Onshape Week2</span></strong></p>
 <p><strong><span><a href="http://mde.tw/cadp2018/content/OnshapeWeek%202.html">2018 電腦輔助設計實習教材 OnshapeWeek 2</a></span></strong></p>
 <p><strong><span><a href="http://mde.tw/cadp2018./../downloads/2-1-Lesson%20Plan.pdf">2-1-Lesson Plan.pdf</a></span></strong></p>
 <p><strong><span>Onshape Week2  homework</span></strong></p>
 <p><strong><span><a href="http://mde.tw/cadp2018./../downloads/2-2-Homework.pdf">2-2-Homework.pdf</a></span></strong></p>
 <p><strong><span><a href="https://cad.onshape.com/documents/570c509de4b0b585da448d8c/w/a187923b0b25e8418f1d75b9/e/fb779d9a569edde8b30114ee">https://cad.onshape.com/documents/570c509de4b0b585da448d8c/w/a187923b0b25e8418f1d75b9/e/fb779d9a569edde8b30114ee</a></span></strong></p>
-<p></p><br />Week4 << <a href='Week4.html'>Previous</a> <a href='Week6.html'>Next</a> >> Week6</section></div></body></html>
+<p></p>
+<br />Week4 << <a href='Week4.html'>Previous</a> <a href='Week6.html'>Next</a> >> Week6</section></div></body></html>
