--- a/content/Week6.html
+++ b/content/Week6.html
@@ -67,7 +67,7 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>Week5 << <a href='Week5.html'>Previous</a> <a href='Week7.html'>Next</a> >> Week7<br /><h1>Week6</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a><li><a href='Week10.html'>Week10</a><li><a href='Week11.html'>Week11</a><li><a href='Week12.html'>Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a><li><a href='Week15.html'>Week15</a><li><a href='Week16.html'>Week16</a><li><a href='Week17.html'>Week17</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>Week5 << <a href='Week5.html'>Previous</a> <a href='Week7.html'>Next</a> >> Week7<br /><h1>Week6</h1>
 <p><strong><span>說明如何升級最新的CMSimfly倉儲中的flaskapp.py</span></strong></p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/mH_tW3erBqs" width="500"></iframe></p>
 <p><strong><span>Onshape Week3</span></strong></p>
@@ -76,4 +76,5 @@ $(function(){
 <p><strong><span>Onshape Week3  homework</span></strong></p>
 <p><strong><span><a href="http://mde.tw/cadp2018./../downloads/3-2-Homework.pdf">3-2-Homework.pdf</a></span></strong></p>
 <p><a href="https://cad.onshape.com/documents/7b5553135cdf6caafa9a6946/w/549bd8008ce6e8a13dc6b6cf/e/27159315ac3670adb78c8eec">https://cad.onshape.com/documents/7b5553135cdf6caafa9a6946/w/549bd8008ce6e8a13dc6b6cf/e/27159315ac3670adb78c8eec</a></p>
-<p></p><br />Week5 << <a href='Week5.html'>Previous</a> <a href='Week7.html'>Next</a> >> Week7</section></div></body></html>
+<p></p>
+<br />Week5 << <a href='Week5.html'>Previous</a> <a href='Week7.html'>Next</a> >> Week7</section></div></body></html>
